[gd_scene load_steps=4 format=3 uid="uid://ri0ir77dhiiu"]

[ext_resource type="Script" path="res://upgrades/choice.gd" id="1_800n4"]
[ext_resource type="Texture2D" uid="uid://b7y6gf4dtssin" path="res://assets/upgrade_sprite/border_0.png" id="2_82uw5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_durcd"]
size = Vector2(206, 308)

[node name="choice" type="Area2D"]
show_behind_parent = true
script = ExtResource("1_800n4")

[node name="art" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.4, 0.4)

[node name="border" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.6, 1.6)
texture = ExtResource("2_82uw5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_durcd")

[node name="Name" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -160.0
offset_right = 100.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
bbcode_enabled = true
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
metadata/_edit_use_anchors_ = true

[node name="Effect" type="RichTextLabel" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 160.0
offset_right = 100.0
offset_bottom = 160.0
grow_horizontal = 2
bbcode_enabled = true
fit_content = true
shortcut_keys_enabled = false

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
